--- a/hasznalatiut.html
+++ b/hasznalatiut.html
@@ -2,11 +2,15 @@
 <html>
     <head>
             <title>Használati utasítás</title>
+            <link rel="stylesheet" href="hasznalat.css">
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+
     </head>
     <body>
         <h1>Használati utasítás</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Írásmérő</a>
+        <a class="navbar-brand" href="projekt1j.html">Írásmérő</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,12 +25,42 @@
           </ul>
         </div>
       </nav>
-        <ol>
-            <li><img src="1.png" alt="Első lépés">Az elsó lépésnél ki kell választani a fejlécen az ÍRÁSMÉRŐT</li>
-            <li><img src="2.png" alt="Második lépés">Válassz nehézséget</li>
-            <li>Nyomj rá a start gombra</li>
-            <li><img src="3.png" alt="Harmadik lépés">A fönt látható szöveget be kell írni a az üres mezőbe</li>
-            <li><img src="5.png" alt="Negyedik lépés">Miután beírtuk a szöveget felül láthatjuk az új szót, illetve a régi szót és annak a leírásának gyorsaságát wpn(word per minute)-ben</li>
-        </ol>
+        <div class="card-group">
+          <div class="card">
+            <img src="1.png" class="card-img-top" alt="1. lépés">
+            <div class="card-body">
+              <h5 class="card-title">1. Lépés</h5>
+              <p class="card-text">Az elsó lépésnél ki kell választani a fejlécen az ÍRÁSMÉRŐT</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="2.png" class="card-img-top" alt="2. Lépés">
+            <div class="card-body">
+              <h5 class="card-title">2. Lépés</h5>
+              <p class="card-text">Válassz nehézséget</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="4.png" class="card-img-top" alt="3. Lépés">
+            <div class="card-body">
+              <h5 class="card-title">3. Lépés</h5>
+              <p class="card-text">Nyomj rá a start gombra</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="3.png" class="card-img-top" alt="3. Lépés">
+            <div class="card-body">
+              <h5 class="card-title">4. Lépés</h5>
+              <p class="card-text">A fönt látható szöveget be kell írni a az üres mezőbe</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="5.png" class="card-img-top" alt="3. Lépés">
+            <div class="card-body">
+              <h5 class="card-title">5. Lépés</h5>
+              <p class="card-text"> Miután beírtuk a szöveget felül láthatjuk az új szót, illetve a régi szót és annak a leírásának gyorsaságát wpn(word per minute)-ben</p>
+            </div>
+          </div>
+        </div>
     </body>
 </html>
