--- a/hasznalatiut.html
+++ b/hasznalatiut.html
@@ -2,25 +2,27 @@
 <html>
     <head>
             <title>Használati utasítás</title>
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
     </head>
     <body>
         <h1>Használati utasítás</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Írásmérő</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div id="kk" class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a target="_blank" class="nav-link" href="hasznalatiut.html">Használati utasítás <span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Készítői</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+          <a class="navbar-brand" href="#">Írásmérő</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div id="kk" class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a target="_blank" class="nav-link" href="hasznalatiut.html">Használati utasítás <span class="sr-only"></span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="keszitok.html">Készítői</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
         <ol>
             <li><img src="1.png" alt="Első lépés">Az elsó lépésnél ki kell választani a fejlécen az ÍRÁSMÉRŐT</li>
             <li><img src="2.png" alt="Második lépés">Válassz nehézséget</li>
@@ -28,5 +30,7 @@
             <li><img src="3.png" alt="Harmadik lépés">A fönt látható szöveget be kell írni a az üres mezőbe</li>
             <li><img src="5.png" alt="Negyedik lépés">Miután beírtuk a szöveget felül láthatjuk az új szót, illetve a régi szót és annak a leírásának gyorsaságát wpn(word per minute)-ben</li>
         </ol>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+
     </body>
 </html>
