--- a/projekt1j.html
+++ b/projekt1j.html
@@ -22,7 +22,7 @@
           <a target="_blank" class="nav-link" href="hasznalatiut.html">Használati utasítás <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Készítői</a>
+          <a class="nav-link" href="keszitok.html">Készítői</a>
         </li>
       </ul>
     </div>
