--- a/keszitok.html
+++ b/keszitok.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="andrisprj.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
+      <style>body{color: whitesmoke;}</style>
     </head>
     <body>
 
@@ -37,7 +37,7 @@
         <br>
         <br>
         <br>
-        <h2>Projektben részvevő emberek munkái:</h2>
+        <h2>Projektben résztvevő emberek munkái:</h2>
         <ul>
             <li>Projektmenedzser
                 <ul><li>Visnyei Máté</li></ul>
