--- a/hasznalatiut.html
+++ b/hasznalatiut.html
@@ -17,7 +17,7 @@
         <div id="kk" class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a target="_blank" class="nav-link" href="hasznalatiut.html">Használati utasítás <span class="sr-only"></span></a>
+              <a class="nav-link" href="hasznalatiut.html">Használati utasítás <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Készítői</a>
