--- a/keszitok.html
+++ b/keszitok.html
@@ -7,14 +7,14 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Írásmérő</a>
+            <a class="navbar-brand" href="projekt1j.html">Írásmérő</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div id="kk" class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a target="_blank" class="nav-link" href="hasznalatiut.html">Használati utasítás <span class="sr-only"></span></a>
+                  <a class="nav-link" href="hasznalatiut.html">Használati utasítás <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="keszitok.html">Készítői</a>
