--- a/hasznalatiut.html
+++ b/hasznalatiut.html
@@ -2,6 +2,7 @@
 <html>
     <head>
             <title>Használati utasítás</title>
+         <link rel="icon" type="image/x-icon" href="munka.png"/>
             <link rel="stylesheet" href="hasznalat.css">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
             <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +21,7 @@
               <a class="nav-link" href="hasznalatiut.html">Használati utasítás <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Készítői</a>
+              <a class="nav-link" href="keszitok.html">Készítői</a>
             </li>
           </ul>
         </div>
