--- a/keszitok.html
+++ b/keszitok.html
@@ -1,9 +1,15 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="andrisprj.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-      <style>body{color: whitesmoke;}</style>
-    </head>
+<head>
+    <link rel="icon" type="image/x-icon" href="munka.png" />
+    <title>Készítők</title>
+    <link rel="stylesheet" href="andrisprj.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <style>
+        body {
+            color: whitesmoke;
+        }
+    </style>
+</head>
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
